fixed teamSelected state issues

--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -1,5 +1,6 @@
 #cover {
-  background: #222 url("../../images/room.jpg") center center no-repeat !important;
+  background: #222 url("../../images/ticketbackground.jpg") center center
+    no-repeat !important;
   background-size: cover !important;
   height: 100vh;
   text-align: center;
