--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -1,4 +1,48 @@
-#cover {
+body {
+  background: rgb(219, 226, 226);
+}
+/* .container {
+  width: 100vw !important;
+  height: 100% !important;
+} */
+#main {
+  max-height: 100% !important;
+}
+.row {
+  background: white;
+  border-radius: 30px;
+  box-shadow: 12px 12px 22px grey;
+}
+#username-input {
+  width: 100% !important;
+}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+#loginImg {
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+  max-width: 30rem;
+}
+.btn1 {
+  border: none;
+  outline: none;
+  height: 50px;
+  width: 100% !important;
+  background-color: black;
+  color: white;
+  border-radius: 4px;
+  font-weight: bold;
+}
+.btn1:hover {
+  background: white;
+  border: 1px solid;
+  color: black;
+}
+
+/* #cover {
   background: #222 url("../../images/ticketbackground.jpg") center center
     no-repeat !important;
   background-size: cover !important;
@@ -26,7 +70,6 @@ body {
   z-index: 1;
 }
 
-/* only used for background overlay not needed for centering */
 form:before {
   content: "";
   height: 100%;
@@ -58,4 +101,4 @@ form:before {
 #error-password {
   color: rgb(255, 255, 255);
   font-size: 16px;
-}
+} */
