--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -1,6 +1,14 @@
 body {
-  background: rgb(219, 226, 226);
+  background: rgb(219, 226, 226) !important;
+  /* overflow: hidden; */
+  /* overflow-y: hidden; */
+  max-width: 100rem !important;
 }
+#parent {
+  width: 100%;
+  height: 100%;
+}
+
 /* .container {
   width: 100vw !important;
   height: 100% !important;
@@ -20,6 +28,7 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  /* overflow: hidden; */
 }
 #loginImg {
   border-top-left-radius: 30px;
@@ -31,15 +40,24 @@ body {
   outline: none;
   height: 50px;
   width: 100% !important;
-  background-color: black;
+  /* background-color: rgb(148, 203, 234); */
+  background-color: rgb(230, 104, 116);
   color: white;
   border-radius: 4px;
   font-weight: bold;
 }
 .btn1:hover {
-  background: white;
+  background: rgb(190, 162, 165);
   border: 1px solid;
-  color: black;
+  color: rgb(0, 0, 0);
+}
+
+#error-username {
+  color: darkred;
+  text-decoration: underline;
+  font-weight: bold;
+}
+#parent {
 }
 
 /* #cover {
