updating /inventory path to retrieve full ticket info

--- a/client/src/components/CreateTicket/CreateTicket.css
+++ b/client/src/components/CreateTicket/CreateTicket.css
@@ -111,7 +111,7 @@ td {
   font-size: 1rem;
 }
 
-body {
+/* body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 1.5rem;
@@ -119,7 +119,7 @@ body {
   background-color: rgb(228, 220, 215) !important;
   width: 100vw !important;
   height: 100vh !important;
-}
+} */
 
 .header {
   min-height: 30vh;
