--- a/client/src/components/EditTicket/EditTicket.css
+++ b/client/src/components/EditTicket/EditTicket.css
@@ -11,10 +11,10 @@ select {
   padding: 10px;
 }
 
-#EditTable {
+/* #EditTable {
   min-width: 90% !important;
   max-width: 90% !important;
-}
+} */
 
 /* input {
   background-color: rgb(231, 223, 223);
@@ -22,7 +22,7 @@ select {
   text-align: center;
 } */
 
-table {
+/* table {
   box-sizing: border-box;
   font-family: Helvetica, Arial, sans-serif;
   border-collapse: collapse;
@@ -32,7 +32,7 @@ table {
   min-width: 60% !important;
   max-width: 80% !important;
   margin-top: 2rem;
-}
+} */
 
 #h1class {
   text-align: center;
@@ -40,7 +40,7 @@ table {
   margin-top: 20px;
 }
 
-.table,
+/* .table,
 td {
   vertical-align: middle !important;
 }
@@ -61,10 +61,9 @@ tr:nth-child(odd) {
 th,
 td {
   padding: 10px;
-  /* text-align: center !important; */
-  vertical-align: top !important;
-  border: 2px solid rgb(54, 54, 54);
-}
+  /* text-align: center !important; 
+ 
+} 
 
 #editMessage {
   text-align: center;
@@ -82,7 +81,7 @@ td {
   background-color: rgb(231, 223, 223) !important;
   margin-left: auto;
   margin-right: auto;
-  /* display: block; */
+  
   margin-top: 1.5rem;
   cursor: pointer;
   width: 30%;
