--- a/client/src/components/Inventory/Inventory.css
+++ b/client/src/components/Inventory/Inventory.css
@@ -4,7 +4,15 @@
   box-sizing: border-box;
 }
 
-table {
+#logout {
+  font-size: 1.2rem;
+}
+#logo {
+  width: 170px;
+  height: 50px;
+}
+
+/* table {
   box-sizing: border-box;
   font-family: Helvetica, Arial, sans-serif;
   border-collapse: collapse;
@@ -14,9 +22,9 @@ table {
   min-width: 60% !important;
   max-width: 80% !important;
   margin-top: 2rem;
-}
+} */
 
-.table,
+/* .table,
 td {
   vertical-align: middle !important;
 }
@@ -27,16 +35,16 @@ tr:nth-child(even) {
 
 tr:nth-child(odd) {
   background-color: rgb(207, 193, 193);
-}
+} */
 
 #trow {
   cursor: pointer;
 }
 #trow:hover {
-  background-color: rgb(182, 140, 140);
+  background-color: rgb(216, 203, 208);
 }
 
-.thead-dark th {
+/* .thead-dark th {
   font-size: 1.2rem;
   background-color: rgb(146, 104, 104) !important;
   color: white !important;
@@ -46,7 +54,7 @@ td {
   padding: 10px;
   text-align: center !important;
   border: 2px solid rgb(54, 54, 54);
-}
+} */
 
 #create-ticket {
   color: black;
