--- a/client/src/components/Inventory/Inventory.css
+++ b/client/src/components/Inventory/Inventory.css
@@ -41,33 +41,27 @@ tr:nth-child(odd) {
   cursor: pointer;
 }
 #trow:hover {
-  background-color: rgb(216, 203, 208);
+  background-color: rgb(203, 216, 203);
 }
 
-/* .thead-dark th {
-  font-size: 1.2rem;
-  background-color: rgb(146, 104, 104) !important;
-  color: white !important;
-}
-th,
-td {
-  padding: 10px;
-  text-align: center !important;
-  border: 2px solid rgb(54, 54, 54);
-} */
-
-#create-ticket {
+#create-ticket-btn {
   color: black;
   text-align: center;
-  padding: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   box-sizing: border-box;
-  font-size: 1.5rem !important;
+  font-size: 1.3rem !important;
   background-color: rgb(236, 233, 233);
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: auto !important;
+
   display: block;
-  margin-top: 1.5rem;
+
   cursor: pointer;
+}
+.create-div {
+  margin-left: auto;
 }
 
 .description {
@@ -79,48 +73,19 @@ td {
   max-height: 4em; /* a x number of line to show (ex : 2 line)  */
 }
 
-.create-ticket {
-  cursor: pointer;
-  font-size: 1rem;
-}
-
-/* body {
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  font-size: 1.5rem;
-  line-height: 1.7;
-  background-color: rgb(228, 220, 215) !important;
-  width: 100vw !important;
-  height: 100vh !important;
-} */
-
-.header {
-  min-height: 30vh;
-  background-image: linear-gradient(
-      to left bottom,
-      rgba(225, 226, 228, 0.219),
-      rgba(236, 235, 235, 0.63)
-    ),
-    url("../../images/backgroundbrown.png");
-
-  background-size: cover;
-  background-position: center;
-  position: relative;
-}
-
 .back-box {
   position: absolute;
-  top: 20px;
+  top: 130px;
   left: 40px;
 }
 
 #back {
   font-size: 1rem;
-  color: rgb(235, 227, 227);
+  color: rgb(15, 70, 10);
   padding: 10px;
-  border: 3px solid rgb(211, 205, 205);
+  border: 3px solid rgb(158, 175, 153);
   border-radius: 4px !important;
-  background-color: rgba(255, 255, 255, 0.26);
+  background-color: rgba(226, 235, 224, 0.26) !important;
   cursor: pointer;
 }
 
