--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,15 +1,27 @@
 #mynav {
   padding-top: 0px !important;
-  background-color: rgb(214, 231, 190) !important;
+  background-color: rgb(239, 240, 238) !important;
 }
 .nav-item {
-  margin-left: 20px;
-  padding-top: 0px !important;
-  margin-top: 25px !important;
-  font-size: 20px !important;
+  padding-top: 9px !important;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-top: 25px;
+  font-size: 16px !important;
   color: black;
-  font-weight: bold !important;
+  font-weight: bold;
+  border: 2px solid rgb(2, 59, 2);
+  border-radius: 40px;
+  background-color: rgb(211, 223, 202);
 }
+#home {
+  margin-left: auto;
+}
+#logout {
+  margin-left: 20px;
+  margin-right: 40px;
+}
+
 .logo {
   margin-left: 20px !important;
   margin-top: 20px !important;
@@ -18,6 +30,7 @@
   margin-top: 25px !important;
   padding-top: 0px !important;
   margin-bottom: 0px !important;
-  font-size: 20px;
+  font-size: 32px;
   font-family: "Brush Script MT";
+  margin-left: 10px;
 }
