--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -8,11 +8,13 @@
   padding-right: 30px;
   margin-top: 25px;
   font-size: 16px !important;
+  font-family: copperplate gothic light;
   color: black;
   font-weight: bold;
   border: 2px solid rgb(2, 59, 2);
   border-radius: 40px;
-  background-color: rgb(211, 223, 202);
+  /* background-color: rgb(211, 223, 202); */
+  background-color: rgba(107, 207, 120, 0.466);
 }
 #home {
   margin-left: auto;
@@ -30,7 +32,8 @@
   margin-top: 25px !important;
   padding-top: 0px !important;
   margin-bottom: 0px !important;
-  font-size: 32px;
-  font-family: "Brush Script MT";
+  font-size: 28px;
+  /* font-family: "Brush Script MT"; */
+  font-family: copperplate gothic light;
   margin-left: 10px;
 }
