--- a/client/src/components/CreateTicket/CreateTicket.css
+++ b/client/src/components/CreateTicket/CreateTicket.css
@@ -37,8 +37,41 @@
   margin-top: 20px;
 }
 
-.back-box {
-  position: absolute;
-  top: 130px;
-  left: 40px;
+#back-to-inv {
+  font-size: 1rem;
+  padding: 10px;
+  color: rgb(15, 70, 10);
+  padding: 15px;
+  border: 3px solid rgb(158, 175, 153);
+  /* border-radius: 4px !important; */
+  background-color: rgba(173, 219, 163, 0.26) !important;
+  cursor: pointer;
+  box-sizing: border-box;
+
+  /* width: 200px !important; */
+
+  /* margin-bottom: 10px; */
+}
+#center-parent {
+  width: 100%;
+  height: 100%;
+  margin-top: 1.5em;
+  margin-left: 4em;
+  margin-bottom: 1em;
+
+  position: relative;
+}
+#center-link {
+  /* width: 80%;
+  height: 100%; */
+  display: inline-block;
+  /* background-color: red; */
+  position: relative;
+}
+
+.back-class {
+  /* background-color: green; */
+}
+#mrow {
+  margin: 0 !important;
 }
