--- a/client/src/components/EditTicket/EditTicket.css
+++ b/client/src/components/EditTicket/EditTicket.css
@@ -4,27 +4,73 @@
   box-sizing: border-box;
 }
 
-#h1class {
-  text-align: center;
-  color: rgb(129, 120, 120);
-  margin-top: 20px;
+#edit-form {
+  /* border: 2px solid green; */
+  background-color: rgb(247, 248, 247);
+}
+#edit-status {
+  width: 100%;
+  height: 40px;
+}
+.color {
+  background-color: rgb(247, 248, 247);
+  margin-top: 0px;
 }
 
-#center {
-  display: flex;
-  justify-content: space-around;
-  float: center !important;
+#center-parent {
+  width: 100%;
+  height: 100%;
+  margin-top: 1.5em;
+  margin-left: 4em;
+  margin-bottom: 1em;
+
+  position: relative;
 }
-.description {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  word-wrap: break-word;
-  /* display: block; */
-  line-height: 1em; /* a */
-  max-height: 4em; /* a x number of line to show (ex : 2 line)  */
+#center-link {
+  /* width: 80%;
+  height: 100%; */
+  display: inline-block;
+  /* background-color: red; */
+  position: relative;
 }
 
-.create-ticket {
-  cursor: pointer;
+#back-to-inv {
   font-size: 1rem;
+  padding: 10px;
+  color: rgb(15, 70, 10);
+  padding: 15px;
+  border: 3px solid rgb(158, 175, 153);
+  /* border-radius: 4px !important; */
+  background-color: rgba(173, 219, 163, 0.26) !important;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+#submit-edit-btn {
+  text-align: center;
+  padding: 10px;
+  box-sizing: border-box;
+  background-color: rgba(112, 196, 106, 0.555);
+  border: 2px solid green;
+  border-radius: 200px;
+  display: block;
+  margin-top: 1.5rem;
+  cursor: pointer;
+
+  margin-left: 0px !important;
+  width: 40%;
+}
+#delete-btn {
+  text-align: center;
+  padding: 10px;
+  box-sizing: border-box;
+  background-color: rgba(231, 103, 103, 0.616);
+  border: 2px solid rgb(128, 0, 0);
+  border-radius: 200px;
+  display: block;
+  margin-top: 1.5rem;
+  cursor: pointer;
+
+  margin-left: auto;
+  margin-right: 100px;
+  width: 40%;
 }
