--- a/client/src/components/EditTicket/EditTicket.css
+++ b/client/src/components/EditTicket/EditTicket.css
@@ -14,8 +14,10 @@
 }
 .color {
   background-color: rgb(247, 248, 247);
-  margin-top: 0px;
 }
+/* .display-table {
+  border: 2px solid green;
+} */
 
 #center-parent {
   width: 100%;
@@ -49,13 +51,13 @@
   text-align: center;
   padding: 10px;
   box-sizing: border-box;
-  background-color: rgba(112, 196, 106, 0.555);
+  background-color: rgba(112, 196, 106, 0.301);
   border: 2px solid green;
-  border-radius: 200px;
+  border-radius: 10px;
   display: block;
   margin-top: 1.5rem;
   cursor: pointer;
-
+  font-size: 18px;
   margin-left: 0px !important;
   width: 40%;
 }
@@ -63,12 +65,13 @@
   text-align: center;
   padding: 10px;
   box-sizing: border-box;
-  background-color: rgba(231, 103, 103, 0.616);
+  background-color: rgba(231, 103, 103, 0.329);
   border: 2px solid rgb(128, 0, 0);
-  border-radius: 200px;
+  border-radius: 10px;
   display: block;
   margin-top: 1.5rem;
   cursor: pointer;
+  font-size: 18px;
 
   margin-left: auto;
   margin-right: 100px;
