--- a/client/src/components/EditTicket/EditTicket.css
+++ b/client/src/components/EditTicket/EditTicket.css
@@ -6,14 +6,14 @@
 
 #edit-form {
   /* border: 2px solid green; */
-  background-color: rgb(247, 248, 247);
+  background-color: rgba(161, 192, 161, 0.13);
 }
 #edit-status {
   width: 100%;
   height: 40px;
 }
 .color {
-  background-color: rgb(247, 248, 247);
+  background-color: rgba(161, 192, 161, 0.13);
 }
 /* .display-table {
   border: 2px solid green;
