--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -34,7 +34,10 @@ body {
 #loginImg {
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
-  max-width: 30rem;
+  max-width: 25rem;
+  /* margin: auto; */
+  margin-left: 30px;
+  margin-top: 30px;
 }
 .btn1 {
   border: none;
